@@ -872,7 +872,7 @@
 //-- GS_DUST
 518,1000,1000,0,0,0
 //-- GS_FULLBUSTER
-519,1000,1200:1400:1600:1800:2000:2200:2400:2600:2800:3000,0,0,0
+519,1000,1200:1400:1600:1800:2000:2200:2400:2600:2800:3000,0,0,10000
 //-- GS_SPREADATTACK
 520,0,1000,0,0,0
 //-- GS_GROUNDDRIFT
